[package]
name = "dbus-upower-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.12.0", features = ["attributes"]}
futures-lite = "1.13.0"
num_enum = "0.7.0"
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.105"
zbus = "3.14.1"
